<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="2">
        <TextView
                android:layout_width="match_parent"
                android:text="FIRST"
                android:id="@+id/txtFirst"
                android:layout_gravity="left|center_vertical"
                android:layout_height="wrap_content"
                android:textColor="@drawable/blue"/>
        <TextView
                android:layout_width="match_parent"
                android:text="SECOND"
                android:id="@+id/txtSecond"
                android:layout_gravity="left|center_vertical"
                android:layout_height="wrap_content"
                android:textColor="@drawable/violet"/>
        <TextView
                android:layout_width="match_parent"
                android:text="RESULT"
                android:id="@+id/txtEqual"
                android:layout_gravity="left|center_vertical"
                android:layout_height="wrap_content"
                android:textColor="@drawable/red"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="7">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_1"
                    android:id="@+id/but_1" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_2"
                    android:id="@+id/but_2" />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_3"
                    android:id="@+id/but_3"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_4"
                    android:id="@+id/but_4"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_5"
                    android:id="@+id/but_5"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_6"
                    android:id="@+id/but_6"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_7"
                    android:id="@+id/but_7"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_8"
                    android:id="@+id/but_8"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_9"
                    android:id="@+id/but_9"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_0"
                    android:id="@+id/but_0"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_plus"
                    android:id="@+id/but_plus"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_minus"
                    android:id="@+id/but_minus"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_equal"
                    android:id="@+id/but_equal"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_multiplication"
                    android:id="@+id/but_multiplication"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/but_division"
                    android:id="@+id/but_division"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/but_cancel"
                    android:id="@+id/but_cancel"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

